@@ -157,16 +157,16 @@ $portfolio_cache_size_mb = in_megabytes($system_info['portfolio_cache'])['in_meg
          
 // Store system data to archival / lite charts
 $system_stats_path = $base_dir . '/cache/charts/system/archival/system_stats.dat';
-$system_stats_data = time() . $chart_data_set . "\n";
+$system_stats_data = time() . $chart_data_set;
 
-store_file_contents($system_stats_path, $system_stats_data, "append");
+store_file_contents($system_stats_path, $system_stats_data . "\n", "append", false); // WITH newline (UNLOCKED file write)
     		
 // Lite charts (update time dynamically determined in update_lite_chart() logic)
 // Try to assure file locking from archival chart updating has been released, wait 0.12 seconds before updating lite charts
 usleep(120000); // Wait 0.12 seconds
 		
 foreach ( $app_config['power_user']['lite_chart_day_intervals'] as $light_chart_days ) {
-update_lite_chart($system_stats_path, $system_stats_data, $light_chart_days);
+update_lite_chart($system_stats_path, $system_stats_data, $light_chart_days); // WITHOUT newline (var passing)
 }
 		
 		
